tests/ui/attributes/repr-align-in-trait-issue-132391.stderr
error[E0589]: invalid `repr(align)` attribute: `align` needs an argument
  --> $DIR/repr-align-in-trait-issue-132391.rs:2:12
   |
LL |     #[repr(align)]
   |            ^^^^^ help: supply an argument here: `align(...)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0589`.
