tests/ui/attributes/repr-align-in-trait-issue-132391.rs
trait MyTrait {
    #[repr(align)] //~ ERROR invalid `repr(align)` attribute: `align` needs an argument
    fn myfun();
}

pub fn main() {}
